# backhouse-dff

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  BLUEPRINT_SECTION7_STATUS.md  BUILD.md  CEREBRO.spec  CEREBRO_IMPLEMENTATION_ISSUES.md  CEREBRO_Implementation_Rules.md  CEREBRO_PERF_AUDIT_PROMPT.md  CEREBRO_PERF_AUDIT_REPORT.md  CEREBRO_TIGHTENING_PASS.md  CEREBRO_UI_UX_IMPROVEMENT_PLAN.md  Cerebro_Blueprint_v2.0.md  Flet Migration.md  MISTAKES NEVER TO BE REPEATED.md  PERFORMANCE.md  PHASE_1_PROGRESS.md  PHASE_2_PROGRESS.md  PRODUCTION_AUDIT_REPORT.md  README.md  Run CEREBRO.bat  SECURITY.md  SENIOR_REVIEW_TODO.md  audit.py  audit.yml  main.py  mypy.cmd  pyproject.toml  requirements.txt  review,results and dashboad page refactor  ruff.cmd  run.sh  worklog.md
.github/workflows/: ci.yml
.omc/state/: hud-stdin-cache.json  idle-notif-cooldown.json
cerebro/: __main__.py  cli.py  runtime_deps.py  scan_result_store.py
cerebro/controllers/: __init__.py
cerebro/core/: SCAN_PATHS.md  __init__.py  clustering.py  decision.py  deletion.py  design_tokens.py  discovery.py  discovery_optimized.py  duplicate_result.py  fast_pipeline.py  fs_policy.py  group_invariants.py  grouping.py  hashing.py  hashing_optimized.py  md_extractor.py  media_extensions.py  models.py  paths.py  performance.py  pipeline.py  preview.py  root_dedup.py  scanner_adapter.py  scheduler.py  session.py  theme_engine_v3.py  theme_schema.py  utils.py  visual_hashing.py  visual_similarity.py
cerebro/engines/: __init__.py  base_engine.py  burst_detection_engine.py  document_dedup_engine.py  empty_folder_engine.py  file_dedup_engine.py  hash_cache.py  image_dedup_engine.py  image_formats.py  large_file_engine.py  music_dedup_engine.py  orchestrator.py  scan_stage.py  similar_folder_engine.py  turbo_file_engine.py  video_dedup_engine.py
cerebro/history/: __init__.py  models.py  store.py
cerebro/services/: __init__.py  cache_manager.py  config.py  config_migration.py  config_types.py  device_identity.py  global_inventory_db.py  hash_cache.py  logger.py  logging.conf  performance_monitor.py  update_checker.py
cerebro/ui/: main_window.py  theme_engine.py
cerebro/utils/: __init__.py  file_utils.py  formatting.py  paths.py  startup.py  ui_utils.py  validation_utils.py
cerebro/v2/: __init__.py  __main__.py  coordinator.py  diagnostics.py  session_schema.py  shell_open.py
cerebro/workers/: __init__.py  base_worker.py  cleanup_worker.py  delete_worker.py  fast_scan_worker.py  (+1 more)
dev/: README.md  requirements-ci.txt
diagnostics/: _run_phase1_scan.py
docs/: DEFERRED_REVIVALS.md  HOME_REDESIGN_CHECKLIST.md  OBSERVABILITY_GUIDE.md  PRODUCTION_AUDIT_VERIFICATION.md  PRODUCTION_HARDENING_SIGNOFF.md  PRODUCTION_READINESS_AUDIT.md  UI_ARCHITECTURE.md  UI_OVERHAUL_AUDIT.md  UI_OVERHAUL_V6.md  review-smoke-checklist.md
scripts/: build_windows.ps1  review_smoke.md  review_ui_layer_bisect.py  smoke_thumb_grid.py
tests/: test_cli_delete.py  test_cli_restore_trash.py  test_dashboard_resume_integration.py  test_delete_service_undo.py  test_deletion_engine.py  test_deletion_gate.py  test_deletion_gate_integration.py  test_deletion_progress_cancel.py  test_design_system_and_components.py  test_document_dedup_engine.py  test_empty_folder_engine_thread.py  test_empty_folder_pipeline_delete.py  test_engine_start_nonblocking.py  test_explicit_paths_plan.py  test_fallback_trash_manifest.py  test_flet_utils.py  test_hardlink_deletion_block.py  test_hash_cache_batch_writes.py  test_hash_cache_thread_recycle.py  test_history_grid_state.py  test_history_stats_migration.py  test_history_store_schema.py  test_history_store_stress.py  test_image_rgb_normalization.py  test_index_presence.py  test_memory_bounds.py  test_nas_support.py  test_pipeline_symlink_keeper.py  test_preview_manager.py  test_results_page_delete_service_wiring.py  test_review_flow_cart.py  test_review_flow_inspect.py  test_review_flow_router.py  test_review_marked_bytes.py  test_scan_history_aggregate.py  test_scan_performance.py  test_scan_scale.py  test_scan_snapshot.py  test_session_atomic_persist.py  test_session_tokens.py  (+11 more)
(+355 files in other folders)
