[project]
name = "cerebro"
version = "0.1.0"
description = "Fast duplicate file finder"
requires-python = ">=3.10"

# ----------------------------------------------------------------------------
# ruff — linter + formatter, replaces flake8/black/isort
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "T20",  # keep print() regression gate
]

# ----------------------------------------------------------------------------
# mypy — gradual typing
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # third-party libs without stubs
ignore_errors = true
exclude = [
    "tests/",
]
