[project]
name = "cerebro"
version = "0.1.0"
description = "Fast duplicate file finder"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "Pillow>=9.0.0",
    "send2trash>=1.8.0",
    "imagehash>=4.3.1",
    "numpy>=1.24.0",
    "flet>=0.25.0",
]

[project.scripts]
cerebro = "cerebro.cli:main"

# ----------------------------------------------------------------------------
# ruff — linter + formatter, replaces flake8/black/isort
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "T20",  # keep print() regression gate
]

[tool.ruff.lint.per-file-ignores]
"cerebro/cli.py" = ["T201"]          # intentional CLI user output
"cerebro/__main__.py" = ["T201"]     # intentional startup output
"cerebro/runtime_deps.py" = ["T201"] # intentional dependency-check output
"scripts/**" = ["T201"]              # dev/smoke scripts
"tests/**" = ["T201"]                # test diagnostic output

# ----------------------------------------------------------------------------
# mypy — gradual typing
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # third-party libs without stubs
exclude = [
    "tests/",
]
